tests/baselines/reference/declarationEmitDestructuringObjectLiteralPattern2.errors.txt
declarationEmitDestructuringObjectLiteralPattern2.ts(11,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== declarationEmitDestructuringObjectLiteralPattern2.ts (1 errors) ====
    var { a: x11, b: { a: y11, b: { a: z11 }}} = { a: 1, b: { a: "hello", b: { a: true } } };
    
    function f15() {
        var a4 = "hello";
        var b4 = 1;
        var c4 = true;
        return { a4, b4, c4 };
    }
    var { a4, b4, c4 } = f15();
    
    module m {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var { a4, b4, c4 } = f15();
    }